# yew-rest-countries

./: LICENSE  README.md
rest-countries/: Cargo.toml  LICENSE  build.cmd  data.json  index.html  index.scss
rest-countries/abstracts/: colors.scss  country_card.scss  spinner.scss
rest-countries/src/: app.rs  main.rs
rest-countries/src/components/: country_card.rs  country_details.rs  country_list.rs  footer.rs  header.rs  mod.rs  spinner.rs
rest-countries/src/models/: country.rs
rest-countries/src/routes/: details.rs  home.rs  mod.rs
